--- a/backend/.env-example
+++ b/backend/.env-example
@@ -12,6 +12,11 @@ DB_NAME=your_db_name
 DB_URL=postgres://your_db_user:your_db_password@localhost:5432/your_db_name
 
 # JWT 
-JWT_SECRET = mysecretjwt
-JWT_ACCESS_EXPIRY_HOURS = 24
-JWT_REFRESH_EXPIRY_DAYS = 7
+JWT_SECRET=mysecretjwt
+JWT_ACCESS_EXPIRY_HOURS=24
+JWT_REFRESH_EXPIRY_DAYS=7
+
+# Default Admin User
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@localhost
+ADMIN_PASSWORD=admin
