--- a/agent-service/requirements.txt
+++ b/agent-service/requirements.txt
@@ -26,6 +26,7 @@ langchain==1.2.9
 langchain-anthropic==1.3.2
 langchain-core==1.2.9
 langchain-google-genai==4.2.0
+langchain-openai==0.3.0
 langgraph==1.0.8
 langgraph-checkpoint==4.0.0
 langgraph-prebuilt==1.0.7
